--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styled-engine-sc": "^5.4.1",
@@ -12,10 +13,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "material-table": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
+    "react-table-lite": "^2.0.2",
     "styled-components": "^5.3.3",
     "svgo": "^2.8.0",
     "web-vitals": "^2.1.3"
