--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "axios": "^0.26.0",
     "material-table": "^2.0.3",
     "react": "^17.0.2",
+    "react-crud-table": "^0.3.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
