--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "material-table": "^2.0.3",
     "react": "^17.0.2",
     "react-crud-table": "^0.3.1",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "react-table-lite": "^2.0.2",
+    "screenfull": "^6.0.1",
     "styled-components": "^5.3.3",
     "svgo": "^2.8.0",
     "web-vitals": "^2.1.3"
