--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,11 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+backend/node_modules
+
+#Dependency directories
+frontend/node_modules
+
 jspm_packages/
 
 # TypeScript v1 declaration files
